--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,62 @@
-SENTRY_DSN=""
-DJANGO_API_DOAMIN="localhost"
+#
+# DJANGO
+#
+
+DJANGO_LOGGING=false
+DJANGO_PRODUCTION_SENTRY=false
+DJANGO_PRODUCTION_POSTGRES=false
+DJANGO_ALLOWED_HOSTS=example.com,localhost
+
+API_HOST=localhost
+API_PORT=8000
+API_PROD_HOST=0.0.0.0
+API_PROD_PORT=8443
 DJANGO_PAGINATION_LIMIT=5
+DJANGO_LOGGING_FILE=./debug.log
+
+
+#
+# Production SSL Settings
+#
+
+SSL_CERTIFICATE_FILE=./ssl/server.crt
+SSL_PRIVATE_KEY_FILE=./ssl/server.key
+
+
+#
+# POSTGRES
+#
+# DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT/DB_NAME
+
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+POSTGRES_CONN_MAX_AGE=60
+
+#
+# REDIS
+#
+
+REDIS_DJANGO_CACHE_DATABASE=5
+REDIS_DJANGO_CACHE_URL=rediscache://localhost:6379:5?client_class=django_redis.client.DefaultClient
+
+
+#
+# CELERY
+#
+
+REDIS_CELERY_RESULTS_DATABASE=6
+REDIS_CELERY_RESULTS_URL=redis://localhost:6379/6
+CELERY_RESULT_BACKEND=redis://localhost:6379/6
+CELERY_BROKER_URL=amqp://user:password@localhost:5672/project1-celery
+
+#
+# SENTRY
+#
+# SENTRY_DSN=https://SENTRY_PUBLIC_KEY@SENTRY_CLIENT_ID.ingest.sentry.io/SENTRY_PROJECT_ID
+
+SENTRY_DSN=
+
+
+#
+# DJANGO_SECRET_KEY is auto-generated while running script/init.sh
+#
+
