--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.2.10
 certifi==2020.6.20
+dj-database-url==0.5.0
 Django==3.1.2
 django-environ==0.4.5
 djangorestframework==3.12.1
 gunicorn==20.0.4
+psycopg2==2.8.6
 pytz==2020.1
 sentry-sdk==0.18.0
 sqlparse==0.3.1
