--- a/app/.env.example
+++ b/app/.env.example
@@ -2,17 +2,20 @@
 # DJANGO
 #
 
+DJANGO_API_DOMAIN=example.com
+
 DJANGO_LOGGING=false
 DJANGO_PRODUCTION_SENTRY=false
 DJANGO_PRODUCTION_POSTGRES=false
-DJANGO_ALLOWED_HOSTS=example.com,localhost
+
+DJANGO_PAGINATION_LIMIT=5
+DJANGO_LOGGING_FILE=./debug.log
+DJANGO_ALLOWED_HOSTS=${DJANGO_API_DOMAIN},localhost
 
 API_HOST=localhost
 API_PORT=8000
 API_PROD_HOST=0.0.0.0
 API_PROD_PORT=8443
-DJANGO_PAGINATION_LIMIT=5
-DJANGO_LOGGING_FILE=./debug.log
 
 
 #
@@ -28,15 +31,22 @@ SSL_PRIVATE_KEY_FILE=./ssl/server.key
 #
 # DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT/DB_NAME
 
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASS=postgres
+POSTGRES_DB=postgres
 POSTGRES_CONN_MAX_AGE=60
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 #
 # REDIS
 #
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_DJANGO_CACHE_DATABASE=5
-REDIS_DJANGO_CACHE_URL=rediscache://localhost:6379:5?client_class=django_redis.client.DefaultClient
+REDIS_DJANGO_CACHE_URL=rediscache://${REDIS_HOST}:${REDIS_PORT}:5?client_class=django_redis.client.DefaultClient
 
 
 #
@@ -59,4 +69,3 @@ SENTRY_DSN=
 #
 # DJANGO_SECRET_KEY is auto-generated while running script/init.sh
 #
-
