--- a/app/.env.example
+++ b/app/.env.example
@@ -52,11 +52,12 @@ REDIS_DJANGO_CACHE_URL=rediscache://${REDIS_HOST}:${REDIS_PORT}:5?client_class=d
 #
 # CELERY
 #
+# CELERY_BROKER_URL=amqp://USER:PASSWORD@localhost:5672/project1-celery
 
 REDIS_CELERY_RESULTS_DATABASE=6
-REDIS_CELERY_RESULTS_URL=redis://localhost:6379/6
-CELERY_RESULT_BACKEND=redis://localhost:6379/6
-CELERY_BROKER_URL=amqp://user:password@localhost:5672/project1-celery
+REDIS_CELERY_RESULTS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/6
+CELERY_RESULT_BACKEND=redis://${REDIS_HOST}:${REDIS_PORT}/6
+CELERY_BROKER_URL=
 
 #
 # SENTRY
@@ -67,5 +68,6 @@ SENTRY_DSN=
 
 
 #
-# DJANGO_SECRET_KEY is auto-generated while running script/init.sh
+# DJANGO_SECRET_KEY is auto-generated
 #
+
