--- a/app/.env.example
+++ b/app/.env.example
@@ -2,7 +2,7 @@
 # DJANGO
 #
 
-DJANGO_API_DOMAIN=example.com
+DJANGO_API_DOMAIN=localhost
 
 DJANGO_LOGGING=false
 DJANGO_PRODUCTION_SENTRY=false
@@ -10,7 +10,7 @@ DJANGO_PRODUCTION_POSTGRES=false
 
 DJANGO_PAGINATION_LIMIT=5
 DJANGO_LOGGING_FILE=./debug.log
-DJANGO_ALLOWED_HOSTS=${DJANGO_API_DOMAIN},localhost
+DJANGO_ALLOWED_HOSTS=${DJANGO_API_DOMAIN},127.0.0.1
 
 API_HOST=localhost
 API_PORT=8000
